# aleyo-2

./: .env  .env.production  .npmrc  Webpack_Run_Script.ps1  craco.config.js  diagnose.js  fix-mui-imports.js  install.ps1  overrid-ajx.ps1  package-lock.json  package.json  package.json.backup  project.toml  render.yaml  requirements.txt  start-all.bat  start-install.ps1  vercel.json  webpack.config.js
backend/: .env  MakeFile  README.md  add_design_columns.py  aleyo.db  app-1.py  app-2.py  app-3.py  app.py  build.sh  create_stripe_products.py  database.py  dev.bat  dev.sh  env  fix-node-js.ps1  init_db.py  insert_designs.py  install-npm-all.ps1  install.bat  install.ps1  integration_db.py  migrate_db.py  migration_update_design.py  models.py  pricing.py  pyproject.toml  requirements.txt  requirements_db.txt  seed_integrations.py  setup.py  shema.sql  start-project.ps1  storage.py  tutorial_service.py  use_this_schema.sql  verify_install.py
public/: index.html  manifest.json  preview.html  robots.txt
scripts/: build.js
src/: App.css  App.js  App.test.js  fix-ajx.ps1  index.css
src/PriceLocalStorage/: pricinglocalstorage.js
src/components/Auth/: PrivateRoute.js  SessionExpiryModal.js
src/components/DesignStudio/: DesignStudioService.js  DesignStudioUtils.js  EditorCanvas.js  EditorDialogs.js  EditorToolbar.js  IntegrationsPanel.js  LeftSidebar.js  ProjectsGallery.js  PropertyEditor.js  PublishManager.js  WebsitePreview.js
src/components/Layout/: Footer.js  Layout.js  Navbar.js  ProtectedLayout.js
src/components/Payment/: PaymentCancel.js  PaymentSuccess.js
src/components/VoiceAssistant/: VoiceAssistant.js
src/context/: AppContext.js  AuthContext.js  RoleBasedRoute.js
src/hooks/: useAuth.js  useDesignStudioState.js
src/pages/: .env  API_Reference.js  Cards.js  Cookies.js  Dashboard.js  DesignGallery.js  DesignStudio.js  DesignStudioFallback_One.js  DesignStudio_fallback.js  DesignStudio_keep_for_reference_1.js  DesignStudio_keep_for_refrerence.js  Designs.js  Documentation_Page.js  ForgotPasswordPage.js  HomePage.js  HostingPlatform.js  IntegrationManager.js  Integrations.js  LoginPage.js  Notifications.js  PaymentPage.js  PaymentSuccess.js  Policy.js  PreviewPage.js  Pricing.js  ResetPasswordPage.js  Saved_Pages.js  SettingsPage.js  SignupPage.js  Support.js  Terms.js  Tutorials.js  Unauthorized.js  VoiceAssistantPage.js  test.html
src/pages/Admin/: AdminAnalytics.js  AdminPanel.js  Settings.js  SystemMonitor.js  UserManagement.js
src/services/: admin.js  api.js  auth.js  config.js  gocardless.js  voiceAssistant.js
